Add react dependencies

--- a/package.json
+++ b/package.json
@@ -24,14 +24,20 @@
     "jquery": "^3.1.1",
     "jquery.cookie": "^1.4.1",
     "lazysizes": "^4.0.1",
+    "material-ui": "^0.20.0",
     "materialize-css": "^0.100.2",
     "medium-editor": "^5.23.3",
     "mobx": "^3.0.2",
     "mobx-react": "^4.1.0",
     "popper.js": "^1.12.5",
     "query-string": "^5.0.1",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
+    "react": "^15.6.2",
+    "react-dom": "^15.6.2",
+    "react-redux": "^5.0.6",
+    "react-router": "^4.2.0",
+    "redux": "^3.7.2",
+    "redux-form": "^7.2.1",
+    "redux-form-material-ui": "^4.3.3",
     "select2": "^4.0.3",
     "sortablejs": "^1.5.0-rc1",
     "svg-injector-2": "^2.0.35"
