--- a/package.json
+++ b/package.json
@@ -17,10 +17,15 @@
     "npm": "^5.4.2"
   },
   "dependencies": {
+    "apollo": "^0.2.2",
+    "apollo-client": "^2.2.1",
+    "apollo-client-preset": "^1.0.6",
     "bootstrap": "4.0.0-beta.2",
     "classnames": "^2.2.5",
     "detect-passive-events": "^1.0.4",
     "dropzone": "^5.2.0",
+    "graphql": "^0.12.3",
+    "graphql-tag": "^2.6.1",
     "jquery": "^3.1.1",
     "jquery.cookie": "^1.4.1",
     "lazysizes": "^4.0.1",
@@ -32,9 +37,11 @@
     "popper.js": "^1.12.5",
     "query-string": "^5.0.1",
     "react": "^15.6.2",
+    "react-apollo": "^2.0.4",
     "react-dom": "^15.6.2",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-form": "^7.2.1",
     "redux-form-material-ui": "^4.3.3",
