--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
     "graphql-tag": "^2.6.1",
     "jquery": "^3.1.1",
     "jquery.cookie": "^1.4.1",
+    "jss": "^9.6.0",
     "lazysizes": "^4.0.1",
-    "material-ui": "^0.20.0",
+    "material-ui": "^1.0.0-beta.31",
     "materialize-css": "^0.100.2",
     "medium-editor": "^5.23.3",
     "mobx": "^3.0.2",
@@ -39,6 +40,7 @@
     "react": "^15.6.2",
     "react-apollo": "^2.0.4",
     "react-dom": "^15.6.2",
+    "react-jss": "^8.2.1",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
