--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "apollo": "^0.2.2",
     "apollo-client": "^2.2.1",
     "apollo-client-preset": "^1.0.6",
+    "apollo-link-http": "^1.3.2",
     "bootstrap": "4.0.0-beta.2",
     "classnames": "^2.2.5",
     "detect-passive-events": "^1.0.4",
@@ -36,6 +37,7 @@
     "mobx": "^3.0.2",
     "mobx-react": "^4.1.0",
     "popper.js": "^1.12.5",
+    "prop-types": "^15.6.0",
     "query-string": "^5.0.1",
     "react": "^15.6.2",
     "react-apollo": "^2.0.4",
