--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "classnames": "^2.2.5",
     "detect-passive-events": "^1.0.4",
     "dropzone": "^5.2.0",
+    "enzyme": "^3.3.0",
     "graphql": "^0.12.3",
     "graphql-tag": "^2.6.1",
+    "jest": "^22.1.4",
+    "jest-enzyme": "^4.2.0",
     "jquery": "^3.1.1",
     "jquery.cookie": "^1.4.1",
     "jss": "^9.6.0",
