Add basic tests

--- a/package.json
+++ b/package.json
@@ -25,10 +25,8 @@
     "classnames": "^2.2.5",
     "detect-passive-events": "^1.0.4",
     "dropzone": "^5.2.0",
-    "enzyme": "^3.3.0",
     "graphql": "^0.12.3",
     "graphql-tag": "^2.6.1",
-    "jest": "^22.1.4",
     "jest-enzyme": "^4.2.0",
     "jquery": "^3.1.1",
     "jquery.cookie": "^1.4.1",
@@ -67,8 +65,12 @@
     "@babel/preset-stage-0": "^7.0.0-beta.40",
     "autoprefixer": "^7.1.4",
     "babel-eslint": "^8.2.2",
+    "babel-jest": "^22.2.2",
     "babel-loader": "^8.0.0-beta.2",
+    "chai": "^4.1.2",
     "css-loader": "^0.28.10",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-15": "^1.0.5",
     "eslint": "^4.6.1",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-config-standard": "^10.2.1",
@@ -79,10 +81,13 @@
     "eslint-plugin-standard": "^3.0.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.10",
+    "jest": "^22.3.0",
     "mjml": "^3.3.5",
     "node-sass": "^4.7.2",
     "postcss": "^6.0.11",
     "postcss-loader": "^2.0.6",
+    "react-test-renderer": "^15.6.1",
+    "regenerator-runtime": "^0.11.1",
     "sass-loader": "^6.0.6",
     "webpack": "^4.0.1",
     "webpack-bundle-tracker": "0.2.0",
