--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jss": "^9.6.0",
     "lazysizes": "^4.0.1",
     "material-ui": "^1.0.0-beta.31",
+    "material-ui-icons": "^1.0.0-beta.17",
     "materialize-css": "^0.100.2",
     "medium-editor": "^5.23.3",
     "mobx": "^3.0.2",
@@ -49,9 +50,9 @@
     "react-responsive": "^4.0.4",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "react-svg": "^2.2.11",
     "redux": "^3.7.2",
     "redux-form": "^7.2.1",
-    "redux-form-material-ui": "^5.0.0-beta.2",
     "select2": "^4.0.3",
     "sortablejs": "^1.5.0-rc1",
     "svg-injector-2": "^2.0.35"
