--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jquery.cookie": "^1.4.1",
     "jss": "^9.6.0",
     "lazysizes": "^4.0.1",
+    "lodash": "^4.17.5",
     "material-ui": "^1.0.0-beta.31",
     "material-ui-icons": "^1.0.0-beta.17",
     "materialize-css": "^0.100.2",
@@ -42,12 +43,11 @@
     "prop-types": "^15.6.0",
     "qs": "^6.5.1",
     "query-string": "^5.0.1",
-    "react": "^15.6.2",
+    "react": "^16.2.0",
     "react-apollo": "^2.0.4",
-    "react-dom": "^15.6.2",
+    "react-dom": "^16.2.0",
     "react-jss": "^8.2.1",
     "react-redux": "^5.0.6",
-    "react-responsive": "^4.0.4",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-svg": "^2.2.11",
