--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -98,7 +98,7 @@
 
     // disallow else after a return in an if
     // https://eslint.org/docs/rules/no-else-return
-    "no-else-return": ["error", { "allowElseIf": true }],
+    "no-else-return": "error",
 
     // disallow empty functions, except for standalone funcs/arrows
     // http://eslint.org/docs/rules/no-empty-function
