Fix codeclimate again

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -183,9 +183,7 @@
     }],
 
     // disallow use of multiple spaces
-    "no-multi-spaces": ["error", {
-      "ignoreEOLComments": false
-    }],
+    "no-multi-spaces": "error",
 
     // disallow use of multiline strings
     "no-multi-str": "error",
