Fix root category adding

--- a/saleor/static/dashboard/js/components/app/.eslintrc.json
+++ b/saleor/static/dashboard/js/components/app/.eslintrc.json
@@ -18,7 +18,9 @@
     "gettext": true,
     "pgettext": true,
     "ngettext": true,
-    "interpolate": true
+    "interpolate": true,
+    "it": true,
+    "describe": true
   },
   "plugins": [
     "import",
