--- a/saleor/static/dashboard/js/components/app/.eslintrc.json
+++ b/saleor/static/dashboard/js/components/app/.eslintrc.json
@@ -19,6 +19,7 @@
     "pgettext": true,
     "ngettext": true,
     "interpolate": true,
+    "beforeAll": true,
     "it": true,
     "describe": true
   },
