--- a/package.json
+++ b/package.json
@@ -95,7 +95,7 @@
     "regenerator-runtime": "^0.11.1",
     "sass-loader": "^6.0.6",
     "webpack": "^4.0.1",
-    "webpack-bundle-tracker": "0.2.0",
+    "webpack-bundle-tracker": "^0.2.1",
     "webpack-cli": "^2.0.9",
     "webpack-dev-server": "^3.1.0"
   },
