[WIP] Refactor components to not abuse the APIs

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "classnames": "^2.2.5",
     "detect-passive-events": "^1.0.4",
     "dropzone": "^5.2.0",
-    "graphql": "^0.12.3",
+    "graphql": "^0.13.1",
     "graphql-tag": "^2.6.1",
     "jest-enzyme": "^4.2.0",
     "jquery": "^3.1.1",
@@ -45,7 +45,7 @@
     "qs": "^6.5.1",
     "query-string": "^5.0.1",
     "react": "^16.2.0",
-    "react-apollo": "^2.0.4",
+    "react-apollo": "^2.1.0-beta.3",
     "react-dom": "^16.2.0",
     "react-jss": "^8.2.1",
     "react-redux": "^5.0.6",
@@ -56,7 +56,9 @@
     "redux-form": "^7.2.1",
     "select2": "^4.0.3",
     "sortablejs": "^1.5.0-rc1",
-    "svg-injector-2": "^2.0.35"
+    "svg-injector-2": "^2.0.35",
+    "typescript": "^2.7.2",
+    "universal-cookie": "^2.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.40",
@@ -66,6 +68,8 @@
     "@babel/preset-es2015": "^7.0.0-beta.40",
     "@babel/preset-react": "^7.0.0-beta.40",
     "@babel/preset-stage-0": "^7.0.0-beta.40",
+    "@types/react-dom": "^16.0.4",
+    "@types/react-router-dom": "^4.2.4",
     "autoprefixer": "^7.1.4",
     "babel-eslint": "^8.2.2",
     "babel-jest": "^22.2.2",
@@ -93,6 +97,7 @@
     "react-test-renderer": "^15.6.1",
     "regenerator-runtime": "^0.11.1",
     "sass-loader": "^6.0.6",
+    "ts-loader": "^4.0.0",
     "webpack": "^4.0.1",
     "webpack-bundle-tracker": "^0.2.1",
     "webpack-cli": "^2.0.9",
