--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "apollo-cache-inmemory": "^1.1.10",
     "apollo-client": "^2.2.6",
     "apollo-client-preset": "^1.0.6",
+    "apollo-codegen": "^0.19.0",
     "apollo-link-http": "^1.3.2",
     "bootstrap": "4.0.0-beta.2",
     "classnames": "^2.2.5",
@@ -136,6 +137,8 @@
     ]
   },
   "scripts": {
+    "build-schema": "python manage.py graphql_schema --schema saleor.dashboard.graphql.api.schema --out saleor/static/dashboard-next/js/schema.json",
+    "generate-types": "apollo-codegen generate 'saleor/static/dashboard-next/js/category/**/*.ts*' --schema saleor/static/dashboard-next/js/schema.json --target typescript --output saleor/static/dashboard-next/js/category/gql-types.ts",
     "build-assets": "node ./node_modules/webpack/bin/webpack.js -p --progress",
     "heroku-postbuild": "npm run build-assets && npm run build-emails",
     "start": "node ./node_modules/webpack/bin/webpack.js -d --watch --progress",
