--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "apollo-client": "^2.2.6",
     "apollo-client-preset": "^1.0.6",
     "apollo-codegen": "^0.19.0",
-    "apollo-link-http": "^1.3.2",
+    "apollo-link-http": "^1.5.3",
     "bootstrap": "4.0.0-beta.2",
     "classnames": "^2.2.5",
     "detect-passive-events": "^1.0.4",
@@ -45,7 +45,7 @@
     "qs": "^6.5.1",
     "query-string": "^5.0.1",
     "react": "^16.2.0",
-    "react-apollo": "^2.1.0-beta.3",
+    "react-apollo": "^2.1.0-rc.3",
     "react-dom": "^16.2.0",
     "react-jss": "^8.2.1",
     "react-redux": "^5.0.6",
@@ -88,7 +88,7 @@
     "eslint-plugin-react": "^7.7.0",
     "eslint-plugin-standard": "^3.0.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "file-loader": "^1.1.10",
+    "file-loader": "^1.1.11",
     "jest": "^22.3.0",
     "mjml": "^3.3.5",
     "node-sass": "^4.7.2",
@@ -96,12 +96,12 @@
     "postcss-loader": "^2.0.6",
     "react-test-renderer": "^16.2.0",
     "regenerator-runtime": "^0.11.1",
-    "sass-loader": "^6.0.6",
+    "sass-loader": "^6.0.7",
     "ts-jest": "^22.4.1",
-    "ts-loader": "^4.0.0",
-    "webpack": "^4.0.1",
-    "webpack-bundle-tracker": "^0.2.1",
-    "webpack-cli": "^2.0.9",
+    "ts-loader": "^4.0.1",
+    "webpack": "^4.1.1",
+    "webpack-bundle-tracker": "^0.3.0",
+    "webpack-cli": "^2.0.10",
     "webpack-dev-server": "^3.1.0"
   },
   "babel": {
