--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "dropzone": "^5.2.0",
     "graphql": "^0.13.1",
     "graphql-tag": "^2.6.1",
+    "i18next": "^10.5.0",
+    "i18next-browser-languagedetector": "^2.1.0",
+    "i18next-xhr-backend": "^1.5.1",
     "jquery": "^3.1.1",
     "jquery.cookie": "^1.4.1",
     "jss": "^9.6.0",
@@ -68,6 +71,7 @@
     "@babel/preset-es2015": "^7.0.0-beta.40",
     "@babel/preset-react": "^7.0.0-beta.40",
     "@babel/preset-stage-0": "^7.0.0-beta.40",
+    "@types/i18next": "^8.4.3",
     "@types/jest": "^22.2.0",
     "@types/react-dom": "^16.0.4",
     "@types/react-router-dom": "^4.2.4",
