--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "i18next": "^10.5.1",
     "i18next-browser-languagedetector": "^2.1.0",
     "i18next-xhr-backend": "^1.5.1",
+    "invariant": "^2.2.4",
     "jquery": "^3.1.1",
     "jquery.cookie": "^1.4.1",
     "jss": "^9.8.1",
@@ -102,6 +103,8 @@
     "sass-loader": "^6.0.7",
     "ts-jest": "^22.4.2",
     "ts-loader": "^4.1.0",
+    "tslint": "^5.9.1",
+    "tslint-config-prettier": "^1.10.0",
     "webpack": "^4.1.1",
     "webpack-bundle-tracker": "^0.3.0",
     "webpack-cli": "^2.0.12",
