--- a/package.json
+++ b/package.json
@@ -133,18 +133,22 @@
       "^.+\\.tsx?$": "ts-jest"
     },
     "testRegex": "(/__tests__/.*(test|spec))\\.(jsx?|tsx?)$",
-    "moduleFileExtensions": ["ts", "tsx", "js", "jsx", "json", "node"]
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ]
   },
   "scripts": {
-    "build-schema":
-      "python manage.py graphql_schema --schema saleor.dashboard.graphql.api.schema --out saleor/static/dashboard-next/js/schema.json",
-    "generate-types":
-      "apollo-codegen generate 'saleor/static/dashboard-next/js/**/*.ts' --schema saleor/static/dashboard-next/js/schema.json --target typescript --output saleor/static/dashboard-next/js/gql-types.ts",
+    "build-schema": "python manage.py graphql_schema --schema saleor.dashboard.graphql.api.schema --out saleor/static/dashboard-next/js/schema.json",
+    "generate-types": "apollo-codegen generate 'saleor/static/dashboard-next/js/**/*.ts' --schema saleor/static/dashboard-next/js/schema.json --target typescript --output saleor/static/dashboard-next/js/gql-types.ts",
     "build-assets": "webpack -p --progress",
     "heroku-postbuild": "npm run build-assets && npm run build-emails",
     "start": "webpack -d --watch --progress",
-    "build-emails":
-      "mkdir -p templates/templated_email/compiled/ && find templates -name \"*.mjml\" -not -path \"templates/templated_email/source/*partials/*\" -not -path \"templates/templated_email/source/*shared/*\" -exec ./node_modules/.bin/mjml -l skip {} -o templates/templated_email/compiled/ \\;",
+    "build-emails": "mkdir -p templates/templated_email/compiled/ && find templates -name \"*.mjml\" -not -path \"templates/templated_email/source/*partials/*\" -not -path \"templates/templated_email/source/*shared/*\" -exec ./node_modules/.bin/mjml -l skip {} -o templates/templated_email/compiled/ \\;",
     "test": "jest saleor/static/dashboard-next/js/"
   }
 }
