--- a/package.json
+++ b/package.json
@@ -144,7 +144,7 @@
   },
   "scripts": {
     "build-schema": "python manage.py graphql_schema --schema saleor.dashboard.graphql.api.schema --out saleor/static/dashboard-next/js/schema.json",
-    "generate-types": "apollo-codegen generate 'saleor/static/dashboard-next/js/category/**/*.ts*' --schema saleor/static/dashboard-next/js/schema.json --target typescript --output saleor/static/dashboard-next/js/category/gql-types.ts",
+    "generate-types": "apollo-codegen generate 'saleor/static/dashboard-next/js/**/*.ts' --schema saleor/static/dashboard-next/js/schema.json --target typescript --output saleor/static/dashboard-next/js/gql-types.ts",
     "build-assets": "webpack -p --progress",
     "heroku-postbuild": "npm run build-assets && npm run build-emails",
     "start": "webpack -d --watch --progress",
