--- a/package.json
+++ b/package.json
@@ -17,56 +17,98 @@
     "npm": "^5.4.2"
   },
   "dependencies": {
+    "apollo": "^0.2.2",
+    "apollo-cache-inmemory": "^1.1.11",
+    "apollo-client": "^2.2.7",
+    "apollo-client-preset": "^1.0.6",
+    "apollo-codegen": "^0.19.0",
+    "apollo-link-http": "^1.5.3",
     "bootstrap": "4.0.0",
     "classnames": "^2.2.5",
     "detect-passive-events": "^1.0.4",
     "dropzone": "^5.2.0",
+    "graphql": "^0.13.2",
+    "graphql-tag": "^2.6.1",
+    "i18next": "^10.5.1",
+    "i18next-browser-languagedetector": "^2.1.0",
+    "i18next-xhr-backend": "^1.5.1",
+    "invariant": "^2.2.4",
     "jquery": "^3.1.1",
     "jquery.cookie": "^1.4.1",
+    "jss": "^9.8.1",
     "lazysizes": "^4.0.1",
+    "lodash": "^4.17.5",
+    "material-ui": "^1.0.0-beta.38",
+    "material-ui-icons": "^1.0.0-beta.36",
     "materialize-css": "^0.100.2",
     "medium-editor": "^5.23.3",
     "mobx": "^3.0.2",
     "mobx-react": "^4.1.0",
     "popper.js": "^1.14.1",
+    "prop-types": "^15.6.0",
+    "qs": "^6.5.1",
     "query-string": "^5.0.1",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
+    "react": "^16.2.0",
+    "react-apollo": "^2.1.0-rc.5",
+    "react-dom": "^16.2.0",
+    "react-jss": "^8.2.1",
+    "react-redux": "^5.0.6",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "react-svg": "^2.2.11",
+    "redux": "^3.7.2",
     "select2": "^4.0.5",
     "sortablejs": "^1.5.0-rc1",
-    "svg-injector-2": "^2.0.35"
+    "svg-injector-2": "^2.0.35",
+    "typescript": "^2.7.2",
+    "universal-cookie": "^2.1.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.40",
-    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.40",
-    "@babel/plugin-proposal-decorators": "^7.0.0-beta.40",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.40",
-    "@babel/preset-es2015": "^7.0.0-beta.40",
-    "@babel/preset-react": "^7.0.0-beta.40",
-    "@babel/preset-stage-0": "^7.0.0-beta.40",
+    "@babel/core": "^7.0.0-beta.42",
+    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.42",
+    "@babel/plugin-proposal-decorators": "^7.0.0-beta.42",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.42",
+    "@babel/preset-es2015": "^7.0.0-beta.42",
+    "@babel/preset-react": "^7.0.0-beta.42",
+    "@babel/preset-stage-0": "^7.0.0-beta.42",
+    "@types/i18next": "^8.4.3",
+    "@types/jest": "^22.2.0",
+    "@types/react-dom": "^16.0.4",
+    "@types/react-router-dom": "^4.2.5",
+    "@types/react-test-renderer": "^16.0.1",
     "autoprefixer": "^7.1.4",
     "babel-eslint": "^8.2.2",
+    "babel-jest": "^22.2.2",
     "babel-loader": "^8.0.0-beta.2",
+    "chai": "^4.1.2",
     "css-loader": "^0.28.10",
-    "eslint": "^4.6.1",
-    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint": "^4.18.1",
+    "eslint-config-prettier": "^2.9.0",
     "eslint-config-standard": "^10.2.1",
-    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-node": "^5.2.1",
     "eslint-plugin-promise": "^3.4.0",
-    "eslint-plugin-react": "^7.3.0",
+    "eslint-plugin-react": "^7.7.0",
     "eslint-plugin-standard": "^3.0.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "file-loader": "^1.1.10",
+    "file-loader": "^1.1.11",
+    "jest": "^22.3.0",
     "mjml": "^3.3.5",
     "node-sass": "^4.7.2",
     "postcss": "^6.0.11",
     "postcss-loader": "^2.0.6",
-    "sass-loader": "^6.0.6",
-    "webpack": "^4.0.1",
-    "webpack-bundle-tracker": "0.2.0",
-    "webpack-cli": "^2.0.9",
-    "webpack-dev-server": "^3.1.0"
+    "react-test-renderer": "^16.2.0",
+    "regenerator-runtime": "^0.11.1",
+    "sass-loader": "^6.0.7",
+    "ts-jest": "^22.4.2",
+    "ts-loader": "^4.1.0",
+    "tslint": "^5.9.1",
+    "tslint-config-prettier": "^1.10.0",
+    "webpack": "^4.1.1",
+    "webpack-bundle-tracker": "^0.3.0",
+    "webpack-cli": "^2.0.12",
+    "webpack-dev-server": "^3.1.1"
   },
   "babel": {
     "presets": [
@@ -85,10 +127,28 @@
       "schema": "./saleor/static/schema.json"
     }
   },
+  "jest": {
+    "globals": {},
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "testRegex": "(/__tests__/.*(test|spec))\\.(jsx?|tsx?)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ]
+  },
   "scripts": {
-    "build-assets": "node ./node_modules/webpack/bin/webpack.js -p --progress",
+    "build-schema": "python manage.py graphql_schema --schema saleor.dashboard.graphql.api.schema --out saleor/static/dashboard-next/js/schema.json",
+    "generate-types": "apollo-codegen generate 'saleor/static/dashboard-next/js/**/*.ts' --schema saleor/static/dashboard-next/js/schema.json --target typescript --output saleor/static/dashboard-next/js/gql-types.ts",
+    "build-assets": "webpack -p --progress",
     "heroku-postbuild": "npm run build-assets && npm run build-emails",
-    "start": "node ./node_modules/webpack/bin/webpack.js -d --watch --progress",
-    "build-emails": "mkdir -p templates/templated_email/compiled/ && find templates -name \"*.mjml\" -not -path \"templates/templated_email/source/*partials/*\" -not -path \"templates/templated_email/source/*shared/*\" -exec ./node_modules/.bin/mjml -l skip {} -o templates/templated_email/compiled/ \\;"
+    "start": "webpack -d --watch --progress",
+    "build-emails": "mkdir -p templates/templated_email/compiled/ && find templates -name \"*.mjml\" -not -path \"templates/templated_email/source/*partials/*\" -not -path \"templates/templated_email/source/*shared/*\" -exec ./node_modules/.bin/mjml -l skip {} -o templates/templated_email/compiled/ \\;",
+    "test": "jest saleor/static/dashboard-next/js/"
   }
 }
