--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "dropzone": "^5.2.0",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.6.1",
-    "i18next": "^10.5.1",
+    "i18next": "^10.6.0",
     "i18next-browser-languagedetector": "^2.1.0",
     "i18next-xhr-backend": "^1.5.1",
     "invariant": "^2.2.4",
@@ -47,9 +47,9 @@
     "popper.js": "^1.14.1",
     "prop-types": "^15.6.0",
     "qs": "^6.5.1",
-    "query-string": "^5.0.1",
+    "query-string": "^5.1.1",
     "react": "^16.2.0",
-    "react-apollo": "^2.1.0-rc.5",
+    "react-apollo": "^2.1.0",
     "react-dom": "^16.2.0",
     "react-jss": "^8.2.1",
     "react-redux": "^5.0.6",
@@ -72,7 +72,7 @@
     "@babel/preset-react": "^7.0.0-beta.42",
     "@babel/preset-stage-0": "^7.0.0-beta.42",
     "@types/i18next": "^8.4.3",
-    "@types/jest": "^22.2.0",
+    "@types/jest": "^22.2.2",
     "@types/react-dom": "^16.0.4",
     "@types/react-router-dom": "^4.2.5",
     "@types/react-test-renderer": "^16.0.1",
@@ -105,9 +105,9 @@
     "ts-loader": "^4.1.0",
     "tslint": "^5.9.1",
     "tslint-config-prettier": "^1.10.0",
-    "webpack": "^4.1.1",
+    "webpack": "^4.2.0",
     "webpack-bundle-tracker": "^0.3.0",
-    "webpack-cli": "^2.0.12",
+    "webpack-cli": "^2.0.13",
     "webpack-dev-server": "^3.1.1"
   },
   "babel": {
