--- a/package.json
+++ b/package.json
@@ -132,7 +132,7 @@
     "transform": {
       "^.+\\.tsx?$": "ts-jest"
     },
-    "testRegex": "(/__tests__/.*(test|spec))\\.(jsx?|tsx?)$",
+    "testRegex": ".*\\.test\\.tsx?$",
     "moduleFileExtensions": [
       "ts",
       "tsx",
