--- a/themes/saleor/_config.yml
+++ b/themes/saleor/_config.yml
@@ -1,5 +1,6 @@
 menu:
   Docs: https://saleor.readthedocs.io/en/latest/
+  Roadmap: /roadmap
   Services: /#services
   Blog: https://medium.com/saleor
   Demo: http://demo.getsaleor.com
