--- a/requirements.txt
+++ b/requirements.txt
@@ -119,7 +119,7 @@ django-constance==2.0.0
 django-picklefield==1.0.0
 
 #celery==4.0.2
--e git://github.com/celery/celery#master
+git+git://github.com/celery/celery@master#egg=celery
 
 django-celery-beat==1.0.1
 
