Use the supported CSS extract plugin

--- a/package.json
+++ b/package.json
@@ -91,9 +91,9 @@
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-react": "^7.7.0",
     "eslint-plugin-standard": "^3.0.1",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "jest": "^22.4.3",
+    "mini-css-extract-plugin": "^0.2.0",
     "mjml": "^3.3.5",
     "node-sass": "^4.7.2",
     "postcss": "^6.0.11",
