--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "medium-editor": "^5.23.3",
     "mobx": "^3.0.2",
     "mobx-react": "^4.1.0",
+    "moment": "^2.22.1",
     "popper.js": "^1.14.1",
     "prop-types": "^15.6.0",
     "qs": "^6.5.1",
