--- a/source/_data/releases.yml
+++ b/source/_data/releases.yml
@@ -31,12 +31,27 @@
     features:
       left:
         - feature:
-            title: Vatlayer integration
-            description: Integration with Vatlayer for getting tax rates. Switching between net/gross prices displayed in the storefront.
+            title: GDPR
+            description: Set of tools to make you website GDPR compilant
       right:
         - feature:
             title: Abandoned checkouts
             description: Ability to track abandoned checkouts.
+- release:
+    title: <span>April</span> Release
+    image: /images/done.svg
+    link: https://github.com/mirumee/saleor/releases/tag/v2018.04
+    features:
+      left:
+        - feature:
+            title: ""
+            type: list
+            description:
+              - Tax support for european countries
+              - Simplified stock management
+              - Customer notes
+              - Improved menu management
+              - Draft product collections
 - release:
     title: <span>March</span> Release
     image: /images/done.svg
