--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "classnames": "^2.2.5",
     "crc-32": "^1.2.0",
     "detect-passive-events": "^1.0.4",
+    "downshift": "^1.31.14",
     "dropzone": "^5.2.0",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.6.1",
@@ -39,6 +40,7 @@
     "jquery": "^3.1.1",
     "jquery.cookie": "^1.4.1",
     "jss": "^9.8.1",
+    "keycode": "^2.2.0",
     "lazysizes": "^4.0.1",
     "lodash": "^4.17.5",
     "material-ui": "^1.0.0-beta.42",
