--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "apollo-client-preset": "^1.0.6",
     "apollo-codegen": "^0.19.1",
     "apollo-link-http": "^1.5.4",
+    "apollo-upload-client": "^8.0.0",
     "bootstrap": "4.0.0",
     "classnames": "^2.2.5",
     "detect-passive-events": "^1.0.4",
@@ -142,22 +143,24 @@
       "^.+\\.png?$": "jest-file"
     },
     "testRegex": ".*\\.test\\.tsx?$",
-    "moduleFileExtensions": ["ts", "tsx", "js", "jsx", "json", "node"]
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ]
   },
   "scripts": {
     "build-assets": "webpack -p --progress",
-    "build-schema":
-      "python manage.py graphql_schema --schema saleor.graphql.api.schema --out saleor/static/dashboard-next/schema.json",
-    "generate-types":
-      "apollo-codegen generate 'saleor/static/dashboard-next/**/*.ts' --schema saleor/static/dashboard-next/schema.json --target typescript --output saleor/static/dashboard-next/gql-types.ts",
+    "build-schema": "python manage.py graphql_schema --schema saleor.graphql.api.schema --out saleor/static/dashboard-next/schema.json",
+    "generate-types": "apollo-codegen generate 'saleor/static/dashboard-next/**/*.ts' --schema saleor/static/dashboard-next/schema.json --target typescript --output saleor/static/dashboard-next/gql-types.ts",
     "heroku-postbuild": "npm run build-assets && npm run build-emails",
     "start": "webpack -d --watch --progress",
-    "build-emails":
-      "mkdir -p templates/templated_email/compiled/ && find templates -name \"*.mjml\" -not -path \"templates/templated_email/source/*partials/*\" -not -path \"templates/templated_email/source/*shared/*\" -exec mjml -l skip {} -o templates/templated_email/compiled/ \\;",
-    "storybook":
-      "start-storybook -p 3000 -c saleor/static/dashboard-next/storybook/",
-    "build-storybook":
-      "build-storybook -c saleor/static/dashboard-next/storybook/ -o build",
+    "build-emails": "mkdir -p templates/templated_email/compiled/ && find templates -name \"*.mjml\" -not -path \"templates/templated_email/source/*partials/*\" -not -path \"templates/templated_email/source/*shared/*\" -exec mjml -l skip {} -o templates/templated_email/compiled/ \\;",
+    "storybook": "start-storybook -p 3000 -c saleor/static/dashboard-next/storybook/",
+    "build-storybook": "build-storybook -c saleor/static/dashboard-next/storybook/ -o build",
     "test": "jest saleor/static/dashboard-next/"
   }
 }
