--- a/requirements.txt
+++ b/requirements.txt
@@ -84,6 +84,9 @@ urllib3==1.19.1           # via elasticsearch
 # uwsgi==2.0.14
 # xmltodict==0.10.2         # via django-payments
 
+# https://stackoverflow.com/a/50445311/6245268
+kombu==4.1.0
+
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools                # via cryptography
 
