Add privacy policy

--- a/themes/saleor/_config.yml
+++ b/themes/saleor/_config.yml
@@ -1,6 +1,7 @@
 menu:
   Docs: https://saleor.readthedocs.io/en/latest/
-  Roadmap: /roadmap
+  Roadmap: /roadmap/
+  Privacy Policy: /privacy/
   Services: /#services
   Blog: https://medium.com/saleor
   Demo: http://demo.getsaleor.com
