--- a/package.json
+++ b/package.json
@@ -167,6 +167,6 @@
     "build-emails": "mjml -l skip \"templates/templated_email/source/*.mjml\" -o templates/templated_email/compiled",
     "storybook": "start-storybook -p 3000 -c saleor/static/dashboard-next/storybook/",
     "build-storybook": "build-storybook -c saleor/static/dashboard-next/storybook/ -o build",
-    "test": "jest saleor/static/dashboard-next/"
+    "test": "TZ=UTC jest saleor/static/dashboard-next/"
   }
 }
