--- a/package.json
+++ b/package.json
@@ -5,10 +5,29 @@
     "author": "Mirumee",
     "homepage": "https://getsaleor.com/",
     "main": "dist/index.js",
+    "dependencies": {
+        "react": "^16.4.1",
+        "react-dom": "^16.4.1",
+        "react-router": "^4.3.1",
+        "react-router-dom": "^4.3.1"
+    },
     "devDependencies": {
+        "autoprefixer": "^9.0.1",
+        "babel-core": "^6.26.3",
+        "babel-loader": "^7.1.5",
+        "babel-preset-env": "^1.7.0",
+        "babel-preset-react": "^6.24.1",
+        "babel-preset-stage-0": "^6.24.1",
         "clean-webpack-plugin": "^0.1.19",
         "copy-webpack-plugin": "^4.5.2",
+        "css-loader": "^1.0.0",
+        "file-loader": "^1.1.11",
         "html-webpack-plugin": "^3.2.0",
+        "mini-css-extract-plugin": "^0.4.1",
+        "node-sass": "^4.9.2",
+        "postcss": "^7.0.1",
+        "postcss-loader": "^2.1.6",
+        "style-loader": "^0.21.0",
         "sw-precache-webpack-plugin": "^0.11.5",
         "webapp-webpack-plugin": "^2.2.0",
         "webpack": "^4.16.2",
@@ -21,6 +40,7 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "webpack-dev-server --open --watch --port 3000",
-        "build": "webpack"
+        "build": "webpack -p --progress",
+        "watch": "webpack -d --watch --progress --colors"
     }
 }
