--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
         "mini-css-extract-plugin": "^0.4.1",
         "node-sass": "^4.9.2",
         "postcss": "^7.0.1",
+        "postcss-import": "^11.1.0",
         "postcss-loader": "^2.1.6",
         "postcss-preset-env": "^5.3.0",
+        "reset-css": "^4.0.1",
         "style-loader": "^0.21.0",
         "sw-precache-webpack-plugin": "^0.11.5",
         "webapp-webpack-plugin": "^2.2.0",
