--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "react": "^16.4.1",
         "react-dom": "^16.4.1",
         "react-router": "^4.3.1",
-        "react-router-dom": "^4.3.1"
+        "react-router-dom": "^4.3.1",
+        "reset-css": "^4.0.1"
     },
     "devDependencies": {
         "babel-core": "^6.26.3",
@@ -24,14 +25,12 @@
         "file-loader": "^1.1.11",
         "html-webpack-plugin": "^3.2.0",
         "mini-css-extract-plugin": "^0.4.1",
-        "node-sass": "^4.9.2",
         "postcss": "^7.0.1",
-        "postcss-import": "^11.1.0",
         "postcss-loader": "^2.1.6",
         "postcss-preset-env": "^5.3.0",
-        "reset-css": "^4.0.1",
         "style-loader": "^0.21.0",
         "sw-precache-webpack-plugin": "^0.11.5",
+        "typeface-catamaran": "0.0.54",
         "webapp-webpack-plugin": "^2.2.0",
         "webpack": "^4.16.2",
         "webpack-cli": "^3.1.0",
