--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "main": "dist/index.js",
     "browserslist": "last 2 versions",
     "dependencies": {
+        "babel-eslint": "^8.2.6",
+        "eslint-config-prettier": "^2.9.0",
+        "eslint-plugin-prettier": "^2.6.2",
         "react": "^16.4.1",
         "react-dom": "^16.4.1",
         "react-router": "^4.3.1",
