Add github link component

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "main": "dist/index.js",
     "browserslist": "last 2 versions",
     "dependencies": {
+        "axios": "^0.18.0",
         "babel-eslint": "^8.2.6",
         "eslint-config-prettier": "^2.9.0",
         "eslint-plugin-prettier": "^2.6.2",
@@ -14,6 +15,7 @@
         "react-dom": "^16.4.1",
         "react-router": "^4.3.1",
         "react-router-dom": "^4.3.1",
+        "react-svg": "^5.0.6",
         "reset-css": "^4.0.1"
     },
     "devDependencies": {
