--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "css-loader": "^1.0.0",
         "file-loader": "^1.1.11",
         "html-webpack-plugin": "^3.2.0",
+        "image-webpack-loader": "^4.3.1",
         "mini-css-extract-plugin": "^0.4.1",
         "postcss": "^7.0.1",
         "postcss-loader": "^2.1.6",
