--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "eslint-config-prettier": "^2.9.0",
         "eslint-plugin-prettier": "^2.6.2",
         "react": "^16.4.1",
+        "react-device-detect": "^1.5.9",
         "react-dom": "^16.4.1",
         "react-router": "^4.3.1",
         "react-router-dom": "^4.3.1",
