Adds a travis stage for linting the dockerfile
What does this commit/MR do?

- Adds a travis stage for linting the dockerfile
- Ideally this would/will eventaully be moved into codeclimate but
support for hadolint seems to be still pending. Ref:
`https://github.com/hadolint/hadolint/issues/20`

Why is this commit/MR needed?

- Linting on the dockerfile is preferred to follow best practices
- To standardize the approach in an open source project with many
contributors with their own styles.

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,11 +20,22 @@ env:
   global:
     - DJANGO_SETTINGS_MODULE=tests.settings
     - DATABASE_URL='postgres://postgres@localhost:5432/saleor'
+    - HADOLINT=${HOME}/hadolint
+    - HADOLINT_VERSION=1.11.1
+    - HADOLINT_URL=https://github.com/hadolint/hadolint/releases/download
   matrix:
   - DJANGO="1.11"
   - DJANGO="2.0"
   - DJANGO="2.1"
   - DJANGO="master"
+jobs:
+  include:
+  - stage: lint
+    install:
+    - curl -sL "${HADOLINT_URL}/v${HADOLINT_VERSION}/hadolint-$(uname -s)-$(uname -m)" -o ${HADOLINT}
+    - chmod +x ${HADOLINT}
+    script:
+    - ${HADOLINT} ./Dockerfile
 matrix:
   include:
     - python: "3.7"
