Set warrnings as error in pytest CI

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,7 +16,7 @@ exclude_lines =
     if TYPE_CHECKING:
 
 [tool:pytest]
-addopts = -n auto --vcr-record-mode=none --ds=saleor.tests.settings
+addopts = -Werror -n auto --vcr-record-mode=none --ds=saleor.tests.settings
 testpaths = saleor
 filterwarnings =
     ignore::DeprecationWarning
