Add django-celery-results to installed apps

--- a/requirements.txt
+++ b/requirements.txt
@@ -152,3 +152,4 @@ websockets==8.1; python_full_version >= "3.6.1"
 zopfli==0.1.9; python_version >= "3.7"
 algoliasearch>=2.0,<3.0
 gql==2.0.0
+django-celery-results==2.2.0
