--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,6 +66,7 @@ documentation = "https://docs.saleor.io/"
   sendgrid = "^6.7.1"
   micawber = "^0.5.2"
   django-celery-beat = "^2.2.1"
+  posuto = "^2021.10.0"
 
     [tool.poetry.dependencies.celery]
     version = ">=4.4.5,<6.0.0"
