--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ click-plugins==1.1.1; python_version >= "3.6"
 click-repl==0.2.0; python_version >= "3.6"
 click==7.1.2; python_full_version >= "3.6.2" and python_version >= "3.6" and python_full_version < "4.0.0" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6")
 colorama==0.4.4; python_version >= "2.7" and python_full_version < "3.0.0" and sys_platform == "win32" or sys_platform == "win32" and python_full_version >= "3.5.0"
+cryptography==36.0.0; python_version >= "3.6"
 cssselect2==0.4.1; python_version >= "3.6"
 dj-database-url==0.5.0
 dj-email-url==1.0.2
