--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -11,6 +11,7 @@ backports.entry-points-selectable==1.1.1; python_version >= "2.7" and python_ful
 beautifulsoup4==4.7.1
 beautifultable==0.7.0
 billiard==3.6.4.0; python_version >= "3.6"
+black==21.12b0; python_full_version >= "3.6.2"
 boto3==1.20.20; python_version >= "3.6"
 botocore==1.23.20; python_version >= "3.6"
 braintree==4.13.1
@@ -25,10 +26,11 @@ charset-normalizer==2.0.9; python_full_version >= "3.6.0" and python_version >= 
 click-didyoumean==0.3.0; python_full_version >= "3.6.2" and python_full_version < "4.0.0" and python_version >= "3.6"
 click-plugins==1.1.1; python_version >= "3.6"
 click-repl==0.2.0; python_version >= "3.6"
-click==7.1.2; python_full_version >= "3.6.2" and python_version >= "3.6" and python_full_version < "4.0.0" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6")
+click==7.1.2; python_full_version >= "3.6.2" and python_version >= "3.6" and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0") and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6") and python_full_version < "4.0.0"
 codecov==2.1.12; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
 colorama==0.4.4; sys_platform == "win32" and python_full_version >= "3.6.2" and (python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform == "win32" or sys_platform == "win32" and python_version >= "3.6" and python_full_version >= "3.5.0") and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0") and (python_version >= "2.7" and python_full_version < "3.0.0" and platform_system == "Windows" or python_full_version >= "3.5.0" and platform_system == "Windows")
 coverage==6.2; python_version >= "3.6"
+cryptography==36.0.0; python_version >= "3.6"
 cssselect2==0.4.1; python_version >= "3.6"
 distlib==0.3.3; python_full_version >= "3.6.1"
 dj-database-url==0.5.0
@@ -112,13 +114,14 @@ measurement==3.2.0
 micawber==0.5.4
 mpmath==1.2.1; python_version >= "3.6"
 multidict==5.2.0; python_version >= "3.6"
-mypy-extensions==0.4.3; python_version >= "3.6"
+mypy-extensions==0.4.3; python_full_version >= "3.6.2" and python_version >= "3.6"
 mypy==0.910; python_version >= "3.5"
 nodeenv==1.6.0; python_full_version >= "3.6.1"
 oauthlib==3.1.1; python_version >= "3.6"
 openpyxl==3.0.9; python_version >= "3.6"
 opentracing==2.4.0
 packaging==21.3; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
+pathspec==0.9.0; python_full_version >= "3.6.2"
 petl==1.7.4; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
 phonenumberslite==8.12.38
 pillow==8.4.0; python_version >= "3.6"
@@ -192,7 +195,7 @@ threadloop==1.0.2; python_version >= "3.7"
 thrift==0.15.0; python_version >= "3.7"
 tinycss2==1.1.1; python_version >= "3.6"
 toml==0.10.2; python_full_version >= "3.6.2" and python_version >= "3.6" and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0") and (python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.5") and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.6")
-tomli==1.2.2; python_version >= "3.6" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6")
+tomli==1.2.2; python_version >= "3.6" and python_full_version >= "3.6.2" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6")
 tornado==6.1; python_version >= "3.7"
 tox==3.24.4; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
 transifex-client==0.14.3; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0" and python_version < "3.10")
@@ -200,7 +203,7 @@ types-pkg-resources==0.1.3
 types-python-dateutil==2.8.3
 types-pytz==2021.3.1
 types-requests==2.26.1
-typing-extensions==4.0.1; python_version < "3.10" and python_full_version >= "3.6.2" and python_version >= "3.6" and (python_version >= "3.7" and python_full_version < "3.0.0" and python_version < "3.10" or python_full_version >= "3.4.0" and python_version < "3.10" and python_version >= "3.7")
+typing-extensions==4.0.1; python_version >= "3.6" and python_full_version >= "3.6.2" and python_version < "3.10" and (python_version >= "3.7" and python_full_version < "3.0.0" and python_version < "3.10" or python_full_version >= "3.4.0" and python_version < "3.10" and python_version >= "3.7")
 typing-inspect==0.7.1; python_version >= "3.6"
 unidecode==1.3.2; python_version >= "3.6" and python_version < "4.0"
 urllib3==1.26.7; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version < "3.10" and python_version >= "3.6"
